Reduced string compositions